<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="391dp"
        android:layout_height="77dp"
        android:layout_marginTop="729dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979"
        tools:ignore="VisualLintBounds">

        <ImageView
            android:id="@+id/calendar"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/calendar"
            android:visibility="visible"
            app:srcCompat="@drawable/android_contact_icon_icons_1"
            tools:srcCompat="@drawable/android_contact_icon_icons_1"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/menu"
            android:visibility="visible"
            app:srcCompat="@drawable/radiant_game_android_6960"
            tools:srcCompat="@drawable/radiant_game_android_6960" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/profile"
            android:visibility="visible"
            app:srcCompat="@drawable/android_contact_icon_icons_com_50531"
            tools:srcCompat="@drawable/android_contact_icon_icons_com_50531" />
    </LinearLayout>

    <Button
        android:id="@+id/taskbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/floatingactionbar"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="395dp"
        android:layout_height="65dp"
        android:contentDescription="@string/top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_2"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linertask"
        android:layout_width="393dp"
        android:layout_height="557dp"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="240dp"
        app:layout_constraintBottom_toTopOf="@+id/taskbutton"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.224"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="-3dp">


        <CheckBox
            android:id="@+id/checkbox_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Задача" />

        <EditText
            android:id="@+id/edit_text_task"
            android:layout_width="323dp"
            android:layout_height="70dp"
            android:layout_margin="11dp"
            android:hint="@string/Task"
            android:textColorHint="#78909C"
            android:autofillHints=""
             />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="310dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>